syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/grpc/tokens";
package tokens;
import "google/protobuf/empty.proto";

service Tokens {
  rpc RequestAppToken(google.protobuf.Empty) returns (Token) {}
  rpc RequestUserToken(GetUserTokenRequest) returns (Token) {}
  rpc RequestBotToken(GetBotTokenRequest) returns (Token) {}
  rpc UpdateBotToken(UpdateToken) returns (google.protobuf.Empty) {}
  rpc UpdateUserToken(UpdateToken) returns (google.protobuf.Empty) {}
}

message Token {
  string accessToken = 1;
  repeated string scopes = 2;
	int32 expires_in = 3;
}

message GetUserTokenRequest {
  string userId = 1;
}

message GetBotTokenRequest {
  string botId = 1;
}

message UpdateToken {
  string accessToken = 1;
  string refreshToken = 2;
  int64 expiresIn = 3;
  repeated string scopes = 4;
}
